<resources>
    <string name="app_name">RaEasy</string>
    <string name="login">Login</string>
    <string name="_or">OR</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait…</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="institute">Institute Name</string>
    <string name="reg_no">Registration No</string>
    <string name="_continue">Continue</string>
    <string name="txt_terms">By clicking Continue, You agree to Terms and Conditions</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barter_trade">Barter Trade Fragment</string>
    <string name="on_sale">On Sale Fragment</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_ads">My Ads</string>
    <string name="shortlisted_ads">Shortlisted Ads</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="not_logged_in">No Logged in</string>
    <string name="email_placeholder">john@doe.com</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="item_name">Item Name</string>
    <string name="item_desc">Item Description</string>
    <string name="trade_type">Trade Type</string>
    <string name="barter">Barter</string>
    <string name="sell">Sell</string>
    <string name="advert_duration">Advert Duration</string>
    <string name="_4w">4w</string>
    <string name="_2w">2w</string>
    <string name="_8w">8w</string>
    <string name="item_price">Item Price</string>
    <string name="trade_in">Trade in Item (Optional)</string>
    <string name="Proceed">proceed</string>
    <string name="txt_info">Click to Expand or Collapse</string>
    <string name="complete">Complete</string>
    <string name="payment_information">Payment Information</string>
    <string name="amount_to_be_paid">Amount to be paid :</string>
    <string name="mode">Mode :</string>
    <string name="mpesa">MPesa</string>
    <string name="airtel_money">Airtel Money</string>
    <string name="message_placeholder">Message Placeholder</string>
    <string name="payment_page_info">Dear %s to upload item: %s, choose your preferred mode of payment to proceed then press Complete to finalize your item upload</string>
    <string name="confirm_mpesa_number">Confirm MPESA Number</string>
    <string name="phone">Phone</string>
    <string name="confirm_airtelmoney_number">Confirm AirtelMoney Number</string>
    <string name="please_copy_this_code_somewhere">Confirmation Code</string>
    <string name="make_payment">Make Payment</string>
    <string name="name_of_item">Name of Item</string>
    <string name="description">Description</string>
    <string name="trade_in_item">Trade in Item</string>
    <string name="date_posted">Date Posted</string>
    <string name="undefined">undefined</string>
    <string name="anonymous">Anonymous</string>
    <string name="delete">Delete</string>
    <string name="registration_date">Reg Date</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_profile_details">Edit Profile Details</string>
    <string name="submit">Submit</string>
    <string name="no_ads_running">There are no ads currently running…</string>
</resources>
