<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.UploadItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/upload_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/upload_toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:popupTheme="@style/Theme.MaterialComponents.Light"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:titleTextColor="@color/colorWhite" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/expand"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_add"
            android:tint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload_app_bar" />

        <TextView
            android:id="@+id/txtExpand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_info"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/expand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/expand"
            app:layout_constraintTop_toTopOf="@+id/expand" />

        <LinearLayout
            android:id="@+id/optionsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expand">

            <TextView
                android:id="@+id/camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:padding="12dp"
                android:drawableStart="@drawable/ic_camera_alt_black"
                android:drawablePadding="4dp"
                android:text="@string/open_camera"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:drawableStart="@drawable/ic_perm_media_black"
                android:drawablePadding="4dp"
                android:padding="12dp"
                android:text="@string/open_gallery"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/imageLayout"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optionsLayout"
            app:cardCornerRadius="5dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/imagesViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabIndicators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLayout"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMaxWidth="10dp" />

        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_bg"
            android:hint="@string/item_name"
            android:padding="14dp"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabIndicators" />

        <EditText
            android:id="@+id/itemDesc"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_bg"
            android:gravity="start"
            android:hint="@string/item_desc"
            android:padding="14dp"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:minWidth="200dp"
            android:text="@string/trade_type"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tradeTypeRg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemDesc" />

        <RadioGroup
            android:id="@+id/tradeTypeRg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/itemDesc">

            <RadioButton
                android:id="@+id/rbSale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sell" />

            <RadioButton
                android:id="@+id/rbBarter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barter" />
        </RadioGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/darkerGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tradeTypeRg" />

        <TextView
            android:id="@+id/txtAdv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:minWidth="200dp"
            android:text="@string/advert_duration"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/advDuration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <RadioGroup
            android:id="@+id/advDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtAdv"
            app:layout_constraintTop_toBottomOf="@+id/tradeTypeRg">

            <RadioButton
                android:id="@+id/rbTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_2w" />

            <RadioButton
                android:id="@+id/rbFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4w" />

            <RadioButton
                android:id="@+id/rbEight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_8w" />
        </RadioGroup>

        <EditText
            android:id="@+id/itemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_bg"
            android:hint="@string/item_price"
            android:padding="14dp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/advDuration" />

        <EditText
            android:id="@+id/tradeInItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_bg"
            android:hint="@string/trade_in"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

        <Button
            android:id="@+id/btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="8dp"
            android:text="@string/Proceed"
            android:textSize="@dimen/small_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tradeInItem" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>